2009-09-17  David Faure  <faure@kde.org>

	* freedesktop.org.xml.in: Add application/java-archive alias
	for application/x-java-archive so that distributions can get rid
	of /usr/share/mime/packages/sun-java6-jre.xml, which was defining 
	another mimetype for the *.jar glob, causing
	https://bugs.launchpad.net/ubuntu/+source/krusader/+bug/309778

2009-09-16  Pino Toscano  <pino@kde.org>

	* freedesktop.org.xml.in: Add image/openraster mimetype. References:
	http://create.freedesktop.org/wiki/OpenRaster/File_Layout_Specification
	* tests/mypaint.ora: Test data for image/openraster mimetype;
	taken from the mypaint examples.
	* tests/list: Add test case to the list.

2009-09-15  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add PSP MP4 video type

2009-07-31  Bastien Nocera  <hadess@hadess.net>

	* tests/list: Fix test suite for those pesky PS files

2009-07-31  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add *.otf as a glob for
	OpenType fonts so file managers use magic to check
	for fonts vs. OO.o documents (Closes: #20854)

2009-05-20  Bastien Nocera  <hadess@hadess.net>

	* tests/list:
	* tests/text.PS.gz:
	* tests/text.ps.gz: Add test cases for multi-suffix files,
	with mixed-cases

2009-04-21  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/test.por:
	* tests/test.sav: Patch from Ben Pfaff <blp@cs.stanford.edu>
	to add SPSS portable and save formats mime-types (Closes: #20834)

2009-04-21  Bastien Nocera  <hadess@hadess.net>

	* tests/list:
	* tests/test.bflng:
	* tests/test.xhtml: Add a few disable tests for bug #19201

2009-04-20  Bastien Nocera  <hadess@hadess.net>

	* update-mime-database.c (main): Patch from Martin von Gagern
	<Martin.vGagern@gmx.net> to give a better error message when
	a directory doesn't exist (Closes: #20552)

2009-04-20  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/foo.doc: